error correction, credit to xin zhang

--- a/Lecture7.slides.html
+++ b/Lecture7.slides.html
@@ -9995,7 +9995,7 @@ SUVORK5CYII=
 <p>$$ \small \mathbb E^{\mathbb Q}[x(s)] = \mathbb E^{\mathbb P}[x(s) m(s)]  =\mathbb E^{\mathbb P}[x(s) \mathbb E^{\mathbb P}[m(t) | \mathcal{F}_s]]  = \mathbb E^{\mathbb P}[x(s) m(t)] $$</p>
 <p>therefore under $\mathbb Q$ defined by $\frac{d \mathbb Q}{d \mathbb P} = m(t)$:</p>
 <ul>
-<li>$\frac{x(s)}{\sqrt s} = \frac{1}{\sqrt s}(w^{\mathbb Q}(s) + \theta s)$ is standard normal for any $s &lt; t$</li>
+<li>$\frac{x(s)}{\sqrt s} = \frac{1}{\sqrt s}(w^{\mathbb P}(s) + \theta s)$ is standard normal for any $s &lt; t$</li>
 </ul>
 </div>
 </div>
