--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -2168,7 +2168,7 @@ div.output_prompt {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="advice-for-the-real-world-">Advice for the real world:</h2>
-<p>by Paul Phillips: &quot;We&#39;re doing it all wrong&quot;:</p>
+<p>by Paul Phillips (quoting George Orwell): &quot;We&#39;re doing it all wrong&quot;:</p>
 </div>
 </div>
 </div><div class="fragment">
