Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <td align="center">
 <a href="Lecture7.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture7.ipynb">ipynb</a>), no homework</td>
 </tr>
+<tr>
+<td align="center">8. Variance Reduction</td>
+<td align="center">
+<a href="Lecture8.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture8.ipynb">ipynb</a>), homework in slides</td>
+</tr>
 </tbody>
 </table>
 
@@ -141,7 +146,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">Scientific Computing in Finance maintained by <a href="https://github.com/yadongli">yadongli</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
