Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <a href="Lecture7.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture7.ipynb">ipynb</a>), no homework</td>
 </tr>
 <tr>
-<td align="center">8. Variance Reduction</td>
+<td align="center">8. Optimization</td>
 <td align="center">
 <a href="Lecture8.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture8.ipynb">ipynb</a>), homework in slides</td>
 </tr>
