changed to show code - per Hongwei's request

--- a/Lecture8.slides.html
+++ b/Lecture8.slides.html
@@ -1716,26 +1716,6 @@ div.output_prompt {
 </head>
 
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
-<style type="text/css">
-//div.output_wrapper {
-//  margin-top: 0px;
-//}
-.input_hidden {
-  display: none;
-//  margin-top: 5px;
-}
-</style>
-
-<!-- script>
-$(document).ready(function(){
-  $(".output_wrapper").click(function(){
-      $(this).prev('.input_hidden').slideToggle();
-  });
-})
-</script -->
-
 
 <body>
 <div class="reveal">
@@ -1743,7 +1723,6 @@ $(document).ready(function(){
 <div style=display:none>
     
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
 In&nbsp;[1]:
@@ -1765,8 +1744,6 @@ In&nbsp;[1]:
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -2313,7 +2290,6 @@ $$</p>
 </div></section><section>
     
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
 In&nbsp;[12]:
@@ -2336,8 +2312,6 @@ In&nbsp;[12]:
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -2890,7 +2864,6 @@ Reveal.addEventListener( 'slidechanged', function( event ) {
 </body>
 
 
-
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config">
@@ -2919,7 +2892,7 @@ Reveal.initialize({
     controls: true,
 
     // Display a presentation progress bar
-    progress: true,
+    //progress: true,
 
     // Push each slide change to the browser history
     history: false,
@@ -2929,7 +2902,7 @@ Reveal.initialize({
     slideNumber: true,
 
     // Enable touch events for navigation
-    touch: true,
+    //touch: true,
 
     // Enable the slide overview mode
     //overview: true,
@@ -2949,7 +2922,7 @@ Reveal.initialize({
     //autoSlide: 0,
 
     // Enable slide navigation via mouse wheel
-    mouseWheel: false,
+    //mouseWheel: false,
 
     // Transition style
     // transition: 'concave', // default/cube/page/concave/zoom/linear/fade/none
