--- a/Lecture9.slides.html
+++ b/Lecture9.slides.html
@@ -1763,7 +1763,9 @@ Populating the interactive namespace from numpy and matplotlib
 </div>
 
 </div>
-    </div><div class="fragment">
+    </div></section>
+    </section><section>
+    <section>
     
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
@@ -1787,8 +1789,7 @@ Populating the interactive namespace from numpy and matplotlib
 </ul>
 </div>
 </div>
-</div>
-    </div><div class="fragment">
+</div><div class="fragment">
     
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
