--- a/Lecture9.slides.html
+++ b/Lecture9.slides.html
@@ -1716,6 +1716,26 @@ div.output_prompt {
 </head>
 
 
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+<style type="text/css">
+//div.output_wrapper {
+//  margin-top: 0px;
+//}
+.input_hidden {
+  display: none;
+//  margin-top: 5px;
+}
+</style>
+
+<!-- script>
+$(document).ready(function(){
+  $(".output_wrapper").click(function(){
+      $(this).prev('.input_hidden').slideToggle();
+  });
+})
+</script -->
+
 
 <body>
 <div class="reveal">
@@ -1723,6 +1743,7 @@ div.output_prompt {
 <div style=display:none>
     
 <div class="cell border-box-sizing code_cell rendered">
+<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
 In&nbsp;[1]:
@@ -1744,6 +1765,8 @@ In&nbsp;[1]:
 
 </div>
 </div>
+</div>
+
 </div>
 
 <div class="output_wrapper">
@@ -2220,6 +2243,7 @@ choosing $\alpha^k$ so that $(\bx^{k+1}, \bs{s}^{k+1}) \geq 0 $</li>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
+<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
 In&nbsp;[12]:
@@ -2246,6 +2270,8 @@ In&nbsp;[12]:
 
 </div>
 </div>
+</div>
+
 </div>
 
 <div class="output_wrapper">
@@ -2483,6 +2509,7 @@ where we assume $s_0 = 0$.</p>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
+<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
 In&nbsp;[25]:
@@ -2509,6 +2536,8 @@ In&nbsp;[25]:
 
 </div>
 </div>
+</div>
+
 </div>
 
 <div class="output_wrapper">
@@ -2771,6 +2800,7 @@ Reveal.addEventListener( 'slidechanged', function( event ) {
 </body>
 
 
+
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config">
@@ -2799,7 +2829,7 @@ Reveal.initialize({
     controls: true,
 
     // Display a presentation progress bar
-    //progress: true,
+    progress: true,
 
     // Push each slide change to the browser history
     history: false,
@@ -2809,7 +2839,7 @@ Reveal.initialize({
     slideNumber: true,
 
     // Enable touch events for navigation
-    //touch: true,
+    touch: true,
 
     // Enable the slide overview mode
     //overview: true,
@@ -2829,7 +2859,7 @@ Reveal.initialize({
     //autoSlide: 0,
 
     // Enable slide navigation via mouse wheel
-    //mouseWheel: false,
+    mouseWheel: false,
 
     // Transition style
     // transition: 'concave', // default/cube/page/concave/zoom/linear/fade/none
