Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <td align="center">
 <a href="Lecture8.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture8.ipynb">ipynb</a>), homework in slides</td>
 </tr>
+<tr>
+<td align="center">9. Linear programming</td>
+<td align="center">
+<a href="Lecture9.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture9.ipynb">ipynb</a>), homework in slides</td>
+</tr>
 </tbody>
 </table>
 
