Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <tr>
 <td align="center">9. Linear programming</td>
 <td align="center">
-<a href="Lecture9.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture9.ipynb">ipynb</a>), homework in slides</td>
+<a href="Lecture9.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture9.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework7.ipynb">homework</a>
+</td>
 </tr>
 </tbody>
 </table>
