Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <tr>
 <td align="center">8. Optimization</td>
 <td align="center">
-<a href="Lecture8.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture8.ipynb">ipynb</a>), homework in slides</td>
+<a href="Lecture8.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture8.ipynb">ipynb</a>)</td>
 </tr>
 <tr>
 <td align="center">9. Linear programming</td>
