Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <a href="Lecture9.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture9.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework7.ipynb">homework</a>
 </td>
 </tr>
+<tr>
+<td align="center">10. ODE/PDE</td>
+<td align="center">
+<a href="Lecture11.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture11.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework11.ipynb">homework</a>
+</td>
+</tr>
 </tbody>
 </table>
 
