--- a/Lecture11.slides.html
+++ b/Lecture11.slides.html
@@ -1746,7 +1746,7 @@ $(document).ready(function(){
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[41]:
+In&nbsp;[3]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -2228,7 +2228,7 @@ $$</p>
 |1+\lambda h| \leq 1 \Longrightarrow  0 &lt; h &lt; -\frac{2}{\lambda }.
 $$</p>
 <ul>
-<li>This condition is often referred to as the <strong>CFL (Courant-Fletcher-Levy)</strong> condition.</li>
+<li>This condition is often referred to as the <strong>CFL (Courant-Friedrichs–Lewy)</strong> condition.</li>
 </ul>
 </div>
 </div>
@@ -2429,7 +2429,7 @@ $$</p>
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[145]:
+In&nbsp;[4]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
