Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -115,9 +115,15 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <a href="Lecture11.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture11.ipynb">ipynb</a>)</td>
 </tr>
 <tr>
-<td align="center">12. PDE</td>
+<td align="center">12. PDE I</td>
 <td align="center">
 <a href="Lecture12.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture12.ipynb">ipynb</a>)</td>
+</tr>
+<tr>
+<td align="center">13. PDE II</td>
+<td align="center">
+<a href="Lecture13.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture13.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework8.ipynb">homework</a>
+</td>
 </tr>
 </tbody>
 </table>
